--- a/src/edu/umich/sbolt/language/README.org
+++ b/src/edu/umich/sbolt/language/README.org
@@ -16,15 +16,17 @@ simply adding to the list in the [[https://github.com/shiwalimohan/sbolt/blob/ma
 
 * Tags
 Following linguistic tags have been used for POS tagging and grammar.
-| noun          | =NN=  | block, table                                                        |
-| adjective     | =JJ=  | red, large                                                          |
-| verb          | =VB=  | put                                                                 |
-| preposition   | =PP=  | on                                                                  |
-| determiner    | =DT=  | the, a                                                              |
-| sentence      | =SEN= |                                                                     |
-| verb-command  | =VBC= | put a red block on the table                                        |
-| object        | =OBJ= | a red block, the table                                              |
-| goal-info     | =GS=  | goal of put a red block on the table is a red block is on the table |
+| noun            | =NN=  | block, table                                                        |
+| adjective       | =JJ=  | red, large                                                          |
+| verb            | =VB=  | put                                                                 |
+| preposition     | =PP=  | on                                                                  |
+| determiner      | =DT=  | the, a                                                              |
+| object          | =OBJ= | a red large block, the table                                        |
+| verb-command    | =VBC= | put a red block on the table                                        |
+| object-relation | =REL= | a large block is on the table                                       |
+| goal-info       | =GS=  | goal of put a red block on the table is a red block is on the table |
+| proposal-info   | =PS=  | put if a red block is on the table                                  |
+| sentence        | =SEN= |                                                                     |
   
 
 * Grammar
