removed java log files, updated .gitignore

--- a/src/edu/umich/sbolt/language/dictionary.txt
+++ b/src/edu/umich/sbolt/language/dictionary.txt
@@ -1,6 +1,6 @@
-NOUN: block table
-ADJECTIVE: red large
-VERB: put
+NOUN: block table ball pantry
+ADJECTIVE: red large blue small
+VERB: put get 
 DETERMINER: a the
-PREPOSITION: on
-ATTRIBUTE: color
+PREPOSITION: on in from
+ATTRIBUTE: color size
