Updated the parser so that it is easy to add new sentences to the grammer. Info in README and grammar.xml inside sbolt.language

--- a/src/edu/umich/sbolt/language/dictionary.txt
+++ b/src/edu/umich/sbolt/language/dictionary.txt
@@ -1,6 +1,6 @@
-NOUN: block table ball pantry
-ADJECTIVE: red large blue small
+NOUN: block table ball pantry cylinder
+ADJECTIVE: red green blue gray large medium small round square
 VERB: put get 
 DETERMINER: a the
 PREPOSITION: on in from
-ATTRIBUTE: color size
+ATTRIBUTE: color size shape
