--- a/src/edu/umich/sbolt/language/dictionary.txt
+++ b/src/edu/umich/sbolt/language/dictionary.txt
@@ -1,6 +1,6 @@
 NOUN: block table ball pantry cylinder
 ADJECTIVE: red green blue gray large medium small round square
-VERB: put get 
+VERB: put get go
 DETERMINER: a the
-PREPOSITION: on in from
+PREPOSITION: on in from to
 ATTRIBUTE: color size shape
