--- a/src/edu/umich/sbolt/language/grammar.xml
+++ b/src/edu/umich/sbolt/language/grammar.xml
@@ -20,7 +20,7 @@
 		<EntityType>ObjectRelation</EntityType>
 	</Pattern>	
 	<Pattern name="VerbCommand">
-		<Regex>((VB\d* )(OBJ\d* )(PP\d* )(OBJ\d*))|((VB\d* )(OBJ\d*))|(VB\d*)</Regex>
+		<Regex>((VB\d* )(OBJ\d* )(PP\d* )(OBJ\d*))|((VB\d* )(PP\d* )(OBJ\d*))|((VB\d* )(OBJ\d*))|(VB\d*)</Regex>
 		<Tag>VBC</Tag>
 		<EntityType>VerbCommand</EntityType>
 	</Pattern>	
