--- a/src/edu/umich/sbolt/language/dictionary.txt
+++ b/src/edu/umich/sbolt/language/dictionary.txt
@@ -1,4 +1,4 @@
-NOUN: block table ball pantry cylinder
+NOUN: block table ball pantry cylinder blocka blockb blockc blockd
 ADJECTIVE: red green blue gray large medium small round square
 VERB: put get 
 DETERMINER: a the
