--- a/README.org
+++ b/README.org
@@ -6,8 +6,7 @@ Soar agents for BOLT project at UMichigan.
   etc. only used for sanity check.
 - =topchef-soar=: implements kitchen-domain primitive actions goto, pick-up,
   put-down,
-- =verb-learning=: integrates domain actions with interaction;
-  implements learning new actions by chunking
+- =verb-execution=: integrates primitive domain actions with interaction
 - =topchef-soar.soar=: random primitive actions
 - =verb-execution.soar=: interaction, verb-execution, topchef-soar
 
