now handling idioms like "on top of" and "in front of"

--- a/lgsoar/data/link/words/words.n.3
+++ b/lgsoar/data/link/words/words.n.3
@@ -574,4 +574,4 @@ workmanship.n worship.n worsted.n worth.n worthiness.n wrath.n
 wreckage.n wrestling.n wrongdoing.n xenophobia.n yarrow.n yeast.n 
 yoga.n yore.n youthfulness.n yuletide.n zeal.n zealotry.n zest.n 
 zinc.n zoology.n 
-red.n green.n blue.n yellow.n orange.n black.n white.n
+red.n green.n blue.n yellow.n orange.n black.n white.n pink.n
