--- a/src/edu/umich/sbolt/language/dictionary.txt
+++ b/src/edu/umich/sbolt/language/dictionary.txt
@@ -1,5 +1,5 @@
-NOUN: block table ball pantry cylinder stove dishwasher blocka blockb blockc blockd sphere object obj1 obj0 square
-ADJECTIVE: red orange yellow green blue purple gray large medium small round square spherical
+NOUN: block table ball pantry cylinder stove dishwasher blocka blockb blockc blockd object obj1 obj0 square triangle sphere arch half-cylinder l-shape t-shape rectangle
+ADJECTIVE: red orange yellow green blue purple gray large medium small
 VERB: put get go pick
 DETERMINER: a the that
 PREPOSITION: on in from to up down right
