re-fixed the generics

--- a/lgsoar/data/link/words/words.adj.2
+++ b/lgsoar/data/link/words/words.adj.2
@@ -50,3 +50,23 @@ wavier.a waxier.a weaker.a weaklier.a wealthier.a wearier.a
 weightier.a weirder.a whiter.a wider.a wilder.a wilier.a windier.a 
 wintrier.a wirier.a wiser.a wispier.a wittier.a wobblier.a woollier.a 
 worldlier.a wrier.a yellower.a younger.a 
+generic-word.adj.2[0]
+generic-word.adj.2[1]
+generic-word.adj.2[2]
+generic-word.adj.2[3]
+generic-word.adj.2[4]
+generic-word.adj.2[5]
+generic-word.adj.2[6]
+generic-word.adj.2[7]
+generic-word.adj.2[8]
+generic-word.adj.2[9]
+generic-word.adj.2[10]
+generic-word.adj.2[11]
+generic-word.adj.2[12]
+generic-word.adj.2[13]
+generic-word.adj.2[14]
+generic-word.adj.2[15]
+generic-word.adj.2[16]
+generic-word.adj.2[17]
+generic-word.adj.2[18]
+generic-word.adj.2[19]
