--- a/lgsoar/data/link/words/words.adv.1
+++ b/lgsoar/data/link/words/words.adv.1
@@ -253,3 +253,23 @@ vocally vociferously voraciously vulgarly wanly warily warmly weakly.e
 wearily westwards whimsically wholeheartedly wickedly wildly wilfully 
 willingly wisely wistfully wittily woefully wonderfully worriedly 
 wrong-headedly wrongfully wrongly wryly yearningly zealously zestfully 
+generic-word.adv.1[0]
+generic-word.adv.1[1]
+generic-word.adv.1[2]
+generic-word.adv.1[3]
+generic-word.adv.1[4]
+generic-word.adv.1[5]
+generic-word.adv.1[6]
+generic-word.adv.1[7]
+generic-word.adv.1[8]
+generic-word.adv.1[9]
+generic-word.adv.1[10]
+generic-word.adv.1[11]
+generic-word.adv.1[12]
+generic-word.adv.1[13]
+generic-word.adv.1[14]
+generic-word.adv.1[15]
+generic-word.adv.1[16]
+generic-word.adv.1[17]
+generic-word.adv.1[18]
+generic-word.adv.1[19]
