--- a/lgsoar/data/link/words/words.n.1
+++ b/lgsoar/data/link/words/words.n.1
@@ -1,3 +1,5 @@
+@word.n.1[0]
+@word.n.1[1]
 Attorney.n Briton.n Buddhist.n Catholic.n Christian.n Communist.n 
 Dane.n Democrat.n Finn.n General.n Hindu.n Jew.n Justice.n Marxist.n 
 Mayor.n Minister.n Muslim.n Pole.n President.n Prime.n Protestant.n 
@@ -1393,3 +1395,23 @@ yawn.n yea.n yearbook.n yearling.n yearning.n yell.n yen.s yeomanry.n
 yeti.n yob.n yodel.n yodeller.n yogi.n yoke.n yokel.n youngster.n 
 yuppie.n zealot.n zebra.n zenith.n zephyr.n zeppelin.n zero.n zip.n 
 zipper.n zither.n zloty.n zodiac.n zombie.n zone.n zoo.n zoologist.n 
+generic-word.n.1[0]
+generic-word.n.1[1]
+generic-word.n.1[2]
+generic-word.n.1[3]
+generic-word.n.1[4]
+generic-word.n.1[5]
+generic-word.n.1[6]
+generic-word.n.1[7]
+generic-word.n.1[8]
+generic-word.n.1[9]
+generic-word.n.1[10]
+generic-word.n.1[11]
+generic-word.n.1[12]
+generic-word.n.1[13]
+generic-word.n.1[14]
+generic-word.n.1[15]
+generic-word.n.1[16]
+generic-word.n.1[17]
+generic-word.n.1[18]
+generic-word.n.1[19]
