--- a/lgsoar/data/link/words/words.v.1.1
+++ b/lgsoar/data/link/words/words.v.1.1
@@ -113,3 +113,23 @@ welter.v wheeze.v whimper.v whinny.v whir.v whirr.v wilt.v wince.v
 wink.v wiretap.v wisecrack.v wither.v wobble.v womanize.v wrangle.v 
 wriggle.v writhe.v yacht.v yammer.v yap.v yawn.v yearn.v yelp.v yen.v 
 zigzag.v 
+generic-word.v.1.1[0]
+generic-word.v.1.1[1]
+generic-word.v.1.1[2]
+generic-word.v.1.1[3]
+generic-word.v.1.1[4]
+generic-word.v.1.1[5]
+generic-word.v.1.1[6]
+generic-word.v.1.1[7]
+generic-word.v.1.1[8]
+generic-word.v.1.1[9]
+generic-word.v.1.1[10]
+generic-word.v.1.1[11]
+generic-word.v.1.1[12]
+generic-word.v.1.1[13]
+generic-word.v.1.1[14]
+generic-word.v.1.1[15]
+generic-word.v.1.1[16]
+generic-word.v.1.1[17]
+generic-word.v.1.1[18]
+generic-word.v.1.1[19]
