--- a/lgsoar/data/link/words/words.v.1.2
+++ b/lgsoar/data/link/words/words.v.1.2
@@ -128,3 +128,23 @@ weeps.v welshes.v welters.v wheezes.v whimpers.v whinnies.v whirrs.v
 whirs.v wilts.v winces.v winks.v wiretaps.v wisecracks.v withers.v 
 wobbles.v womanizes.v wrangles.v wriggles.v writhes.v yachts.v 
 yammers.v yaps.v yawns.v yearns.v yelps.v yens.v zigzags.v 
+generic-word.v.1.2[0]
+generic-word.v.1.2[1]
+generic-word.v.1.2[2]
+generic-word.v.1.2[3]
+generic-word.v.1.2[4]
+generic-word.v.1.2[5]
+generic-word.v.1.2[6]
+generic-word.v.1.2[7]
+generic-word.v.1.2[8]
+generic-word.v.1.2[9]
+generic-word.v.1.2[10]
+generic-word.v.1.2[11]
+generic-word.v.1.2[12]
+generic-word.v.1.2[13]
+generic-word.v.1.2[14]
+generic-word.v.1.2[15]
+generic-word.v.1.2[16]
+generic-word.v.1.2[17]
+generic-word.v.1.2[18]
+generic-word.v.1.2[19]
