--- a/lgsoar/data/link/words/words.v.10.1
+++ b/lgsoar/data/link/words/words.v.10.1
@@ -12,3 +12,23 @@ resolve.q respond.q retort.q reveal.q rule.q shout.q sigh.q
 speculate.q state.q stipulate.q stress.q suggest.q testify.q 
 theorize.q think.q threaten.q warn.q whisper.q wonder.q write.q 
 relate.q continue.q
+generic-word.v.10.1[0]
+generic-word.v.10.1[1]
+generic-word.v.10.1[2]
+generic-word.v.10.1[3]
+generic-word.v.10.1[4]
+generic-word.v.10.1[5]
+generic-word.v.10.1[6]
+generic-word.v.10.1[7]
+generic-word.v.10.1[8]
+generic-word.v.10.1[9]
+generic-word.v.10.1[10]
+generic-word.v.10.1[11]
+generic-word.v.10.1[12]
+generic-word.v.10.1[13]
+generic-word.v.10.1[14]
+generic-word.v.10.1[15]
+generic-word.v.10.1[16]
+generic-word.v.10.1[17]
+generic-word.v.10.1[18]
+generic-word.v.10.1[19]
