--- a/lgsoar/data/link/words/words.v.2.1
+++ b/lgsoar/data/link/words/words.v.2.1
@@ -103,3 +103,23 @@ visit.v volley.v vomit.v wade.v wag.v wail.v waken.v warp.v water.v
 wave.v wax.v weaken.v wed.v weld.v wheel.v whine.v whirl.v whistle.v 
 whiten.v whittle.v widen.v wiggle.v wire.v withdraw.v worsen.v 
 worship.v wrestle.v wrinkle.v yell.v yield.v yodel.v 
+generic-word.v.2.1[0]
+generic-word.v.2.1[1]
+generic-word.v.2.1[2]
+generic-word.v.2.1[3]
+generic-word.v.2.1[4]
+generic-word.v.2.1[5]
+generic-word.v.2.1[6]
+generic-word.v.2.1[7]
+generic-word.v.2.1[8]
+generic-word.v.2.1[9]
+generic-word.v.2.1[10]
+generic-word.v.2.1[11]
+generic-word.v.2.1[12]
+generic-word.v.2.1[13]
+generic-word.v.2.1[14]
+generic-word.v.2.1[15]
+generic-word.v.2.1[16]
+generic-word.v.2.1[17]
+generic-word.v.2.1[18]
+generic-word.v.2.1[19]
