--- a/lgsoar/data/link/words/words.v.2.2
+++ b/lgsoar/data/link/words/words.v.2.2
@@ -116,3 +116,23 @@ warps.v waters.v waves.v waxes.v weakens.v weds.v welds.v wheels.v
 whines.v whirls.v whistles.v whitens.v whittles.v widens.v wiggles.v 
 wires.v withdraws.v worsens.v worships.v wrestles.v wrinkles.v yells.v 
 yields.v yodels.v 
+generic-word.v.2.2[0]
+generic-word.v.2.2[1]
+generic-word.v.2.2[2]
+generic-word.v.2.2[3]
+generic-word.v.2.2[4]
+generic-word.v.2.2[5]
+generic-word.v.2.2[6]
+generic-word.v.2.2[7]
+generic-word.v.2.2[8]
+generic-word.v.2.2[9]
+generic-word.v.2.2[10]
+generic-word.v.2.2[11]
+generic-word.v.2.2[12]
+generic-word.v.2.2[13]
+generic-word.v.2.2[14]
+generic-word.v.2.2[15]
+generic-word.v.2.2[16]
+generic-word.v.2.2[17]
+generic-word.v.2.2[18]
+generic-word.v.2.2[19]
