--- a/lgsoar/data/link/words/words.v.2.4
+++ b/lgsoar/data/link/words/words.v.2.4
@@ -136,3 +136,23 @@ wedding.v welding.v wheeling.v whining.v whirling.v whistling.v
 whitening.v whittling.v widening.v wiggling.v wiring.v withdrawing.v 
 worsening.v worshipping.v wrestling.v wrinkling.v yelling.v yielding.v 
 yodelling.v 
+generic-word.v.2.4[0]
+generic-word.v.2.4[1]
+generic-word.v.2.4[2]
+generic-word.v.2.4[3]
+generic-word.v.2.4[4]
+generic-word.v.2.4[5]
+generic-word.v.2.4[6]
+generic-word.v.2.4[7]
+generic-word.v.2.4[8]
+generic-word.v.2.4[9]
+generic-word.v.2.4[10]
+generic-word.v.2.4[11]
+generic-word.v.2.4[12]
+generic-word.v.2.4[13]
+generic-word.v.2.4[14]
+generic-word.v.2.4[15]
+generic-word.v.2.4[16]
+generic-word.v.2.4[17]
+generic-word.v.2.4[18]
+generic-word.v.2.4[19]
