--- a/lgsoar/data/link/words/words.v.4.2
+++ b/lgsoar/data/link/words/words.v.4.2
@@ -389,3 +389,23 @@ welcomes.v wends.v westernizes.v wets.v whacks.v wheedles.v whets.v
 whiles.v whitewashes.v wields.v wings.v winnows.v withholds.v 
 withstands.v witnesses.v wolfs.v woos.v words.v worms.v wounds.v 
 wreaks.v wrecks.v wrenches.v wrests.v wrongs.v zaps.v zones.v 
+generic-word.v.4.2[0]
+generic-word.v.4.2[1]
+generic-word.v.4.2[2]
+generic-word.v.4.2[3]
+generic-word.v.4.2[4]
+generic-word.v.4.2[5]
+generic-word.v.4.2[6]
+generic-word.v.4.2[7]
+generic-word.v.4.2[8]
+generic-word.v.4.2[9]
+generic-word.v.4.2[10]
+generic-word.v.4.2[11]
+generic-word.v.4.2[12]
+generic-word.v.4.2[13]
+generic-word.v.4.2[14]
+generic-word.v.4.2[15]
+generic-word.v.4.2[16]
+generic-word.v.4.2[17]
+generic-word.v.4.2[18]
+generic-word.v.4.2[19]
