--- a/lgsoar/data/link/words/words.v.4.5
+++ b/lgsoar/data/link/words/words.v.4.5
@@ -450,3 +450,23 @@ wheedling.g whetting.g whiling.g whitewashing.g wielding.g winging.g
 winnowing.g withholding.g withstanding.g witnessing.g wolfing.g 
 wooing.g wording.g worming.g wounding.g wreaking.g wrecking.g 
 wrenching.g wresting.g wronging.g zapping.g zoning.g 
+generic-word.v.4.5[0]
+generic-word.v.4.5[1]
+generic-word.v.4.5[2]
+generic-word.v.4.5[3]
+generic-word.v.4.5[4]
+generic-word.v.4.5[5]
+generic-word.v.4.5[6]
+generic-word.v.4.5[7]
+generic-word.v.4.5[8]
+generic-word.v.4.5[9]
+generic-word.v.4.5[10]
+generic-word.v.4.5[11]
+generic-word.v.4.5[12]
+generic-word.v.4.5[13]
+generic-word.v.4.5[14]
+generic-word.v.4.5[15]
+generic-word.v.4.5[16]
+generic-word.v.4.5[17]
+generic-word.v.4.5[18]
+generic-word.v.4.5[19]
