--- a/lgsoar/data/link/words/words.v.6.2
+++ b/lgsoar/data/link/words/words.v.6.2
@@ -39,3 +39,23 @@ tapers.v thickens.v thins.v ticks.v tidies.v tightens.v tips.v tires.v
 tones.v topples tosses.v trails.v treads.v trims.v trips.v tucks.v 
 tunes.v twists.v types.v wakes.v warms.v weaves.v weeds.v weighs.v 
 whips.v whoops.v winds.v wins.v wipes.v works.v wraps.v 
+generic-word.v.6.2[0]
+generic-word.v.6.2[1]
+generic-word.v.6.2[2]
+generic-word.v.6.2[3]
+generic-word.v.6.2[4]
+generic-word.v.6.2[5]
+generic-word.v.6.2[6]
+generic-word.v.6.2[7]
+generic-word.v.6.2[8]
+generic-word.v.6.2[9]
+generic-word.v.6.2[10]
+generic-word.v.6.2[11]
+generic-word.v.6.2[12]
+generic-word.v.6.2[13]
+generic-word.v.6.2[14]
+generic-word.v.6.2[15]
+generic-word.v.6.2[16]
+generic-word.v.6.2[17]
+generic-word.v.6.2[18]
+generic-word.v.6.2[19]
