--- a/lgsoar/data/link/words/words.v.6.4
+++ b/lgsoar/data/link/words/words.v.6.4
@@ -49,3 +49,23 @@ tipping.v tiring.v toning.v toppling.v tossing.v trailing.v treading.v
 trimming.v tripping.v tucking.v tuning.v twisting.v typing.v waking.v 
 warming.v weaving.v weeding.v weighing.v whipping.v whooping.v 
 winding.v winning.v wiping.v working.v wrapping.v 
+generic-word.v.6.4[0]
+generic-word.v.6.4[1]
+generic-word.v.6.4[2]
+generic-word.v.6.4[3]
+generic-word.v.6.4[4]
+generic-word.v.6.4[5]
+generic-word.v.6.4[6]
+generic-word.v.6.4[7]
+generic-word.v.6.4[8]
+generic-word.v.6.4[9]
+generic-word.v.6.4[10]
+generic-word.v.6.4[11]
+generic-word.v.6.4[12]
+generic-word.v.6.4[13]
+generic-word.v.6.4[14]
+generic-word.v.6.4[15]
+generic-word.v.6.4[16]
+generic-word.v.6.4[17]
+generic-word.v.6.4[18]
+generic-word.v.6.4[19]
