--- a/lgsoar/data/link/words/words.v.6.5
+++ b/lgsoar/data/link/words/words.v.6.5
@@ -49,3 +49,23 @@ toning.g toppling.g tossing.g trailing.g treading.g trimming.g
 tripping.g tucking.g tuning.g twisting.g typing.g waking.g warming.g 
 weaving.g weeding.g weighing.g whipping.g whooping.g winding.g 
 winning.g wiping.g working.g wrapping.g 
+generic-word.v.6.5[0]
+generic-word.v.6.5[1]
+generic-word.v.6.5[2]
+generic-word.v.6.5[3]
+generic-word.v.6.5[4]
+generic-word.v.6.5[5]
+generic-word.v.6.5[6]
+generic-word.v.6.5[7]
+generic-word.v.6.5[8]
+generic-word.v.6.5[9]
+generic-word.v.6.5[10]
+generic-word.v.6.5[11]
+generic-word.v.6.5[12]
+generic-word.v.6.5[13]
+generic-word.v.6.5[14]
+generic-word.v.6.5[15]
+generic-word.v.6.5[16]
+generic-word.v.6.5[17]
+generic-word.v.6.5[18]
+generic-word.v.6.5[19]
