--- a/lgsoar/data/link/words/words.v.8.1
+++ b/lgsoar/data/link/words/words.v.8.1
@@ -11,3 +11,23 @@ save.v scale.v scare.v shake shore.v single.v size.v skim.v smuggle.v
 sop.v sort.v spice.v stack.v stake.v stave.v string.v stuff.v suss.v 
 sweep.v tack.v tape.v tear.v throw.v tide.v tie.v top.v total.v 
 touch.v toughen.v track.v wad.v wash.v wear.v wring.v yank.v zip.v 
+generic-word.v.8.1[0]
+generic-word.v.8.1[1]
+generic-word.v.8.1[2]
+generic-word.v.8.1[3]
+generic-word.v.8.1[4]
+generic-word.v.8.1[5]
+generic-word.v.8.1[6]
+generic-word.v.8.1[7]
+generic-word.v.8.1[8]
+generic-word.v.8.1[9]
+generic-word.v.8.1[10]
+generic-word.v.8.1[11]
+generic-word.v.8.1[12]
+generic-word.v.8.1[13]
+generic-word.v.8.1[14]
+generic-word.v.8.1[15]
+generic-word.v.8.1[16]
+generic-word.v.8.1[17]
+generic-word.v.8.1[18]
+generic-word.v.8.1[19]
