--- a/lgsoar/data/link/words/words.v.8.2
+++ b/lgsoar/data/link/words/words.v.8.2
@@ -14,3 +14,23 @@ spices.v stacks.v stakes.v staves.v strings.v stuffs.v susses.v
 sweeps.v tacks.v tapes.v tears.v throws.v tides.v ties.v tops.v 
 totals.v touches.v toughens.v tracks.v wads.v washes.v wears.v 
 wrings.v yanks.v zips.v 
+generic-word.v.8.2[0]
+generic-word.v.8.2[1]
+generic-word.v.8.2[2]
+generic-word.v.8.2[3]
+generic-word.v.8.2[4]
+generic-word.v.8.2[5]
+generic-word.v.8.2[6]
+generic-word.v.8.2[7]
+generic-word.v.8.2[8]
+generic-word.v.8.2[9]
+generic-word.v.8.2[10]
+generic-word.v.8.2[11]
+generic-word.v.8.2[12]
+generic-word.v.8.2[13]
+generic-word.v.8.2[14]
+generic-word.v.8.2[15]
+generic-word.v.8.2[16]
+generic-word.v.8.2[17]
+generic-word.v.8.2[18]
+generic-word.v.8.2[19]
