--- a/lgsoar/data/link/words/words.v.8.4
+++ b/lgsoar/data/link/words/words.v.8.4
@@ -17,3 +17,23 @@ stacking.v staking.v staving.v stringing.v stuffing.v sussing.v
 sweeping.v tacking.v taping.v tearing.v throwing.v tiding.v topping.v 
 totaling.v touching.v toughening.v tracking.v tying.v wadding.v 
 washing.v wearing.v wringing.v yanking.v zipping.v 
+generic-word.v.8.4[0]
+generic-word.v.8.4[1]
+generic-word.v.8.4[2]
+generic-word.v.8.4[3]
+generic-word.v.8.4[4]
+generic-word.v.8.4[5]
+generic-word.v.8.4[6]
+generic-word.v.8.4[7]
+generic-word.v.8.4[8]
+generic-word.v.8.4[9]
+generic-word.v.8.4[10]
+generic-word.v.8.4[11]
+generic-word.v.8.4[12]
+generic-word.v.8.4[13]
+generic-word.v.8.4[14]
+generic-word.v.8.4[15]
+generic-word.v.8.4[16]
+generic-word.v.8.4[17]
+generic-word.v.8.4[18]
+generic-word.v.8.4[19]
