--- a/lgsoar/data/link/words/words.adj.3
+++ b/lgsoar/data/link/words/words.adj.3
@@ -59,3 +59,23 @@ westernmost.a whitest.a widest.a wildest.a wiliest.a windiest.a
 wintriest.a wiriest.a wisest.a wispiest.a wittiest.a wobbliest.a 
 woolliest.a worldliest.a wriest.a yellowest.a youngest.a 
 wettest.a
+generic-word.adj.3[0]
+generic-word.adj.3[1]
+generic-word.adj.3[2]
+generic-word.adj.3[3]
+generic-word.adj.3[4]
+generic-word.adj.3[5]
+generic-word.adj.3[6]
+generic-word.adj.3[7]
+generic-word.adj.3[8]
+generic-word.adj.3[9]
+generic-word.adj.3[10]
+generic-word.adj.3[11]
+generic-word.adj.3[12]
+generic-word.adj.3[13]
+generic-word.adj.3[14]
+generic-word.adj.3[15]
+generic-word.adj.3[16]
+generic-word.adj.3[17]
+generic-word.adj.3[18]
+generic-word.adj.3[19]
