--- a/lgsoar/data/link/words/words.adv.2
+++ b/lgsoar/data/link/words/words.adv.2
@@ -11,3 +11,23 @@ principally regrettably remarkably reportedly secondarily similarly
 strictly suddenly supposedly surely tragically unavoidably uncannily 
 uncharacteristically understandably unfortunately unluckily 
 unquestionably 
+generic-word.adv.2[0]
+generic-word.adv.2[1]
+generic-word.adv.2[2]
+generic-word.adv.2[3]
+generic-word.adv.2[4]
+generic-word.adv.2[5]
+generic-word.adv.2[6]
+generic-word.adv.2[7]
+generic-word.adv.2[8]
+generic-word.adv.2[9]
+generic-word.adv.2[10]
+generic-word.adv.2[11]
+generic-word.adv.2[12]
+generic-word.adv.2[13]
+generic-word.adv.2[14]
+generic-word.adv.2[15]
+generic-word.adv.2[16]
+generic-word.adv.2[17]
+generic-word.adv.2[18]
+generic-word.adv.2[19]
