--- a/lgsoar/data/link/words/words.adv.3
+++ b/lgsoar/data/link/words/words.adv.3
@@ -16,3 +16,23 @@ methodologically nutritionally optically organizationally perceptually
 pharmacologically phonetically photographically pragmatically 
 probabilistically rhythmically sociologically spatially stylistically
 syntactically theologically topographically institutionally
+generic-word.adv.3[0]
+generic-word.adv.3[1]
+generic-word.adv.3[2]
+generic-word.adv.3[3]
+generic-word.adv.3[4]
+generic-word.adv.3[5]
+generic-word.adv.3[6]
+generic-word.adv.3[7]
+generic-word.adv.3[8]
+generic-word.adv.3[9]
+generic-word.adv.3[10]
+generic-word.adv.3[11]
+generic-word.adv.3[12]
+generic-word.adv.3[13]
+generic-word.adv.3[14]
+generic-word.adv.3[15]
+generic-word.adv.3[16]
+generic-word.adv.3[17]
+generic-word.adv.3[18]
+generic-word.adv.3[19]
