--- a/lgsoar/data/link/words/words.n.3
+++ b/lgsoar/data/link/words/words.n.3
@@ -574,3 +574,23 @@ workmanship.n worship.n worsted.n worth.n worthiness.n wrath.n
 wreckage.n wrestling.n wrongdoing.n xenophobia.n yarrow.n yeast.n 
 yoga.n yore.n youthfulness.n yuletide.n zeal.n zealotry.n zest.n 
 zinc.n zoology.n 
+generic-word.n.3[0]
+generic-word.n.3[1]
+generic-word.n.3[2]
+generic-word.n.3[3]
+generic-word.n.3[4]
+generic-word.n.3[5]
+generic-word.n.3[6]
+generic-word.n.3[7]
+generic-word.n.3[8]
+generic-word.n.3[9]
+generic-word.n.3[10]
+generic-word.n.3[11]
+generic-word.n.3[12]
+generic-word.n.3[13]
+generic-word.n.3[14]
+generic-word.n.3[15]
+generic-word.n.3[16]
+generic-word.n.3[17]
+generic-word.n.3[18]
+generic-word.n.3[19]
