--- a/lgsoar/data/link/words/words.v.10.2
+++ b/lgsoar/data/link/words/words.v.10.2
@@ -13,3 +13,23 @@ reports.q resolves.q responds.q retorts.q reveals.q rules.q shouts.q
 sighs.q speculates.q states.q stipulates.q stresses.q suggests.q 
 testifies.q theorizes.q thinks.q threatens.q warns.q whispers.q 
 wonders.q writes.q relates.q continues.q
+generic-word.v.10.2[0]
+generic-word.v.10.2[1]
+generic-word.v.10.2[2]
+generic-word.v.10.2[3]
+generic-word.v.10.2[4]
+generic-word.v.10.2[5]
+generic-word.v.10.2[6]
+generic-word.v.10.2[7]
+generic-word.v.10.2[8]
+generic-word.v.10.2[9]
+generic-word.v.10.2[10]
+generic-word.v.10.2[11]
+generic-word.v.10.2[12]
+generic-word.v.10.2[13]
+generic-word.v.10.2[14]
+generic-word.v.10.2[15]
+generic-word.v.10.2[16]
+generic-word.v.10.2[17]
+generic-word.v.10.2[18]
+generic-word.v.10.2[19]
