--- a/lgsoar/data/link/words/words.v.10.3
+++ b/lgsoar/data/link/words/words.v.10.3
@@ -14,3 +14,23 @@ responded.q retorted.q revealed.q ruled.q shouted.q sighed.q
 speculated.q stated.q stipulated.q stressed.q suggested.q testified.q 
 theorized.q thought.q threatened.q whispered.q wondered.q related.q
 continued.q
+generic-word.v.10.3[0]
+generic-word.v.10.3[1]
+generic-word.v.10.3[2]
+generic-word.v.10.3[3]
+generic-word.v.10.3[4]
+generic-word.v.10.3[5]
+generic-word.v.10.3[6]
+generic-word.v.10.3[7]
+generic-word.v.10.3[8]
+generic-word.v.10.3[9]
+generic-word.v.10.3[10]
+generic-word.v.10.3[11]
+generic-word.v.10.3[12]
+generic-word.v.10.3[13]
+generic-word.v.10.3[14]
+generic-word.v.10.3[15]
+generic-word.v.10.3[16]
+generic-word.v.10.3[17]
+generic-word.v.10.3[18]
+generic-word.v.10.3[19]
