--- a/lgsoar/data/link/words/words.v.10.4
+++ b/lgsoar/data/link/words/words.v.10.4
@@ -15,3 +15,23 @@ reporting.q resolving.q responding.q retorting.q revealing.q ruling.q
 shouting.q sighing.q speculating.q stating.q stipulating.q stressing.q 
 suggesting.q testifying.q theorizing.q thinking.q threatening.q 
 warning.q whispering.q wondering.q writing.q relating.q continuing.q
+generic-word.v.10.4[0]
+generic-word.v.10.4[1]
+generic-word.v.10.4[2]
+generic-word.v.10.4[3]
+generic-word.v.10.4[4]
+generic-word.v.10.4[5]
+generic-word.v.10.4[6]
+generic-word.v.10.4[7]
+generic-word.v.10.4[8]
+generic-word.v.10.4[9]
+generic-word.v.10.4[10]
+generic-word.v.10.4[11]
+generic-word.v.10.4[12]
+generic-word.v.10.4[13]
+generic-word.v.10.4[14]
+generic-word.v.10.4[15]
+generic-word.v.10.4[16]
+generic-word.v.10.4[17]
+generic-word.v.10.4[18]
+generic-word.v.10.4[19]
