--- a/lgsoar/data/link/words/words.v.2.3
+++ b/lgsoar/data/link/words/words.v.2.3
@@ -122,3 +122,23 @@ warped.v watered.v waved.v waxed.v weakened.v wedded.v welded.v
 wheeled.v whined.v whirled.v whistled.v whitened.v whittled.v 
 widened.v wiggled.v wired.v worsened.v worshipped.v wrestled.v 
 wrinkled.v yelled.v yielded.v yodelled.v 
+generic-word.v.2.3[0]
+generic-word.v.2.3[1]
+generic-word.v.2.3[2]
+generic-word.v.2.3[3]
+generic-word.v.2.3[4]
+generic-word.v.2.3[5]
+generic-word.v.2.3[6]
+generic-word.v.2.3[7]
+generic-word.v.2.3[8]
+generic-word.v.2.3[9]
+generic-word.v.2.3[10]
+generic-word.v.2.3[11]
+generic-word.v.2.3[12]
+generic-word.v.2.3[13]
+generic-word.v.2.3[14]
+generic-word.v.2.3[15]
+generic-word.v.2.3[16]
+generic-word.v.2.3[17]
+generic-word.v.2.3[18]
+generic-word.v.2.3[19]
