--- a/lgsoar/data/link/words/words.v.2.5
+++ b/lgsoar/data/link/words/words.v.2.5
@@ -137,3 +137,23 @@ wedding.g welding.g wheeling.g whining.g whirling.g whistling.g
 whitening.g whittling.g widening.g wiggling.g wiring.g withdrawing.g 
 worsening.g worshipping.g wrestling.g wrinkling.g yelling.g yielding.g 
 yodelling.g 
+generic-word.v.2.5[0]
+generic-word.v.2.5[1]
+generic-word.v.2.5[2]
+generic-word.v.2.5[3]
+generic-word.v.2.5[4]
+generic-word.v.2.5[5]
+generic-word.v.2.5[6]
+generic-word.v.2.5[7]
+generic-word.v.2.5[8]
+generic-word.v.2.5[9]
+generic-word.v.2.5[10]
+generic-word.v.2.5[11]
+generic-word.v.2.5[12]
+generic-word.v.2.5[13]
+generic-word.v.2.5[14]
+generic-word.v.2.5[15]
+generic-word.v.2.5[16]
+generic-word.v.2.5[17]
+generic-word.v.2.5[18]
+generic-word.v.2.5[19]
