--- a/lgsoar/data/link/words/words.v.5.2
+++ b/lgsoar/data/link/words/words.v.5.2
@@ -12,3 +12,23 @@ slinks.v slopes.v slumps.v soars.v soldiers.v spurts.v squats.v
 stands.v steps.v stoops.v streams.v strolls.v struts.v stumbles.v 
 swims.v swoops.v teams.v tenses.v toddles.v tramps.v trickles.v 
 trudges.v tumbles.v veers.v wafts.v walks.v zeroes.v zooms.v skids.v
+generic-word.v.5.2[0]
+generic-word.v.5.2[1]
+generic-word.v.5.2[2]
+generic-word.v.5.2[3]
+generic-word.v.5.2[4]
+generic-word.v.5.2[5]
+generic-word.v.5.2[6]
+generic-word.v.5.2[7]
+generic-word.v.5.2[8]
+generic-word.v.5.2[9]
+generic-word.v.5.2[10]
+generic-word.v.5.2[11]
+generic-word.v.5.2[12]
+generic-word.v.5.2[13]
+generic-word.v.5.2[14]
+generic-word.v.5.2[15]
+generic-word.v.5.2[16]
+generic-word.v.5.2[17]
+generic-word.v.5.2[18]
+generic-word.v.5.2[19]
