--- a/lgsoar/data/link/words/words.v.5.4
+++ b/lgsoar/data/link/words/words.v.5.4
@@ -15,3 +15,23 @@ spurting.v squatting.v standing.v stepping.v stooping.v streaming.v
 strolling.v strutting.v stumbling.v swimming.v swooping.v teaming.v 
 tensing.v toddling.v tramping.v trickling.v trudging.v tumbling.v 
 veering.v wafting.v walking.v zeroing.v zooming.v skidding.v
+generic-word.v.5.4[0]
+generic-word.v.5.4[1]
+generic-word.v.5.4[2]
+generic-word.v.5.4[3]
+generic-word.v.5.4[4]
+generic-word.v.5.4[5]
+generic-word.v.5.4[6]
+generic-word.v.5.4[7]
+generic-word.v.5.4[8]
+generic-word.v.5.4[9]
+generic-word.v.5.4[10]
+generic-word.v.5.4[11]
+generic-word.v.5.4[12]
+generic-word.v.5.4[13]
+generic-word.v.5.4[14]
+generic-word.v.5.4[15]
+generic-word.v.5.4[16]
+generic-word.v.5.4[17]
+generic-word.v.5.4[18]
+generic-word.v.5.4[19]
