--- a/lgsoar/data/link/words/words.v.6.1
+++ b/lgsoar/data/link/words/words.v.6.1
@@ -33,3 +33,23 @@ swing.v switch.v tally.v tangle.v taper.v thicken.v thin.v tick.v
 tidy.v tighten.v tip.v tire.v tone.v topple toss.v trail.v tread.v 
 trim.v trip.v tuck.v tune.v twist.v type.v wake.v warm.v weed.v 
 weigh.v whip.v whoop.v win.v wind.v wipe.v work.v wrap.v 
+generic-word.v.6.1[0]
+generic-word.v.6.1[1]
+generic-word.v.6.1[2]
+generic-word.v.6.1[3]
+generic-word.v.6.1[4]
+generic-word.v.6.1[5]
+generic-word.v.6.1[6]
+generic-word.v.6.1[7]
+generic-word.v.6.1[8]
+generic-word.v.6.1[9]
+generic-word.v.6.1[10]
+generic-word.v.6.1[11]
+generic-word.v.6.1[12]
+generic-word.v.6.1[13]
+generic-word.v.6.1[14]
+generic-word.v.6.1[15]
+generic-word.v.6.1[16]
+generic-word.v.6.1[17]
+generic-word.v.6.1[18]
+generic-word.v.6.1[19]
