--- a/lgsoar/data/link/words/words.v.8.3
+++ b/lgsoar/data/link/words/words.v.8.3
@@ -15,3 +15,23 @@ skimmed.v smuggled.v sopped.v sorted spiced.v stacked.v staked.v
 staved.v stringed.v strung.v stuffed.v sussed.v swept.v tacked.v 
 taped.v tided.v tied.v topped.v totaled.v touched.v toughened.v 
 tracked.v wadded.v washed.v wrung.v yanked.v zipped.v 
+generic-word.v.8.3[0]
+generic-word.v.8.3[1]
+generic-word.v.8.3[2]
+generic-word.v.8.3[3]
+generic-word.v.8.3[4]
+generic-word.v.8.3[5]
+generic-word.v.8.3[6]
+generic-word.v.8.3[7]
+generic-word.v.8.3[8]
+generic-word.v.8.3[9]
+generic-word.v.8.3[10]
+generic-word.v.8.3[11]
+generic-word.v.8.3[12]
+generic-word.v.8.3[13]
+generic-word.v.8.3[14]
+generic-word.v.8.3[15]
+generic-word.v.8.3[16]
+generic-word.v.8.3[17]
+generic-word.v.8.3[18]
+generic-word.v.8.3[19]
