--- a/lgsoar/data/link/words/words.v.8.5
+++ b/lgsoar/data/link/words/words.v.8.5
@@ -17,3 +17,23 @@ stacking.g staking.g staving.g stringing.g stuffing.g sussing.g
 sweeping.g tacking.g taping.g tearing.g throwing.g tiding.g topping.g 
 totaling.g touching.g toughening.g tracking.g tying.g wadding.g 
 washing.g wearing.g wringing.g yanking.g zipping.g 
+generic-word.v.8.5[0]
+generic-word.v.8.5[1]
+generic-word.v.8.5[2]
+generic-word.v.8.5[3]
+generic-word.v.8.5[4]
+generic-word.v.8.5[5]
+generic-word.v.8.5[6]
+generic-word.v.8.5[7]
+generic-word.v.8.5[8]
+generic-word.v.8.5[9]
+generic-word.v.8.5[10]
+generic-word.v.8.5[11]
+generic-word.v.8.5[12]
+generic-word.v.8.5[13]
+generic-word.v.8.5[14]
+generic-word.v.8.5[15]
+generic-word.v.8.5[16]
+generic-word.v.8.5[17]
+generic-word.v.8.5[18]
+generic-word.v.8.5[19]
