moved some nouns from .3->.4 for category types, add "squishy"

--- a/language/data/link/words/words.adj.1
+++ b/language/data/link/words/words.adj.1
@@ -898,23 +898,4 @@ worried.a worrisome.a worrying.a worshipful.a worthless.a worthwhile.a
 wrathful.a wretched.a wrinkly.a wrongful.a wry.a xenophobic.a 
 yearlong.a yearly.a yellow.a yellowish.a yon.a yonder.a young.a 
 youngish.a youthful.a zany.a zealous.a zestful.a zoological.a 
-generic-word.adj.1[0]
-generic-word.adj.1[1]
-generic-word.adj.1[2]
-generic-word.adj.1[3]
-generic-word.adj.1[4]
-generic-word.adj.1[5]
-generic-word.adj.1[6]
-generic-word.adj.1[7]
-generic-word.adj.1[8]
-generic-word.adj.1[9]
-generic-word.adj.1[10]
-generic-word.adj.1[11]
-generic-word.adj.1[12]
-generic-word.adj.1[13]
-generic-word.adj.1[14]
-generic-word.adj.1[15]
-generic-word.adj.1[16]
-generic-word.adj.1[17]
-generic-word.adj.1[18]
-generic-word.adj.1[19]
+squishy.a
