--- a/language/data/link/words/words.n.4
+++ b/language/data/link/words/words.n.4
@@ -348,24 +348,6 @@ weakness.n weedkiller.n weight.n whiskey.n whisky.n white.n whiting.s
 wick.n width.n willow.n wind.n wine.n winter.n wire.n wireless.n 
 withdrawal.n wonder.n wood.n woodland.n work.n worry.n writing.n 
 yarn.n yew.n yield.n yoghourt.n yoghurt.n yogurt.n yolk.n youth.n 
-zucchini.s 
-generic-word.n.4[0]
-generic-word.n.4[1]
-generic-word.n.4[2]
-generic-word.n.4[3]
-generic-word.n.4[4]
-generic-word.n.4[5]
-generic-word.n.4[6]
-generic-word.n.4[7]
-generic-word.n.4[8]
-generic-word.n.4[9]
-generic-word.n.4[10]
-generic-word.n.4[11]
-generic-word.n.4[12]
-generic-word.n.4[13]
-generic-word.n.4[14]
-generic-word.n.4[15]
-generic-word.n.4[16]
-generic-word.n.4[17]
-generic-word.n.4[18]
-generic-word.n.4[19]
+zucchini.s
+# additions for BOLT property types
+hardness.n softness.n firmness.n
