--- a/language/data/link/words/words.n.3
+++ b/language/data/link/words/words.n.3
@@ -209,7 +209,7 @@ feasibility.n fecundity.n federalism.n feedback.n felt.n femininity.n
 feminism.n fencing.n fennel.n fermentation.n ferocity.n fertility.n 
 fertilization.n fervour.n feudalism.n fibreboard.n fibreglass.n 
 fidelity.n fieldwork.n filigree.n filth.n filtration.n finality.n 
-finance.n financing.n finery.n firewood.n firmness.n fishing.n 
+finance.n financing.n finery.n firewood.n fishing.n 
 fission.n fitness.n fizz.n flaccidity.n flak.n flamboyance.n 
 flatness.n flatulence.n flax.n fleece.n flesh.n flexibility.n flimsy.n 
 flintstone.n flippancy.n flooding.n flooring.n flotsam.n flour.n flu.n 
@@ -243,7 +243,7 @@ gunmetal.n gunnery.n gunny.n gunpowder.n gunrunning.n gustation.n
 gusto.n gynaecology.n gypsum.n haberdashery.n habituation.n 
 haemoglobin.n haemophilia.n hairdressing.n hairsplitting.n half-time.n 
 handiwork.n handling.n handwork.n handwriting.n happiness.n 
-harassment.n hardness.n hardware.n hardwood.n harm.n harrassment.n 
+harassment.n hardware.n hardwood.n harm.n harrassment.n 
 harshness.n hash.n hashish.n hatching.n hate.n havoc.n hay.n 
 headgear.n headroom.n headway.n health.n hearsay.n heartbreak.n 
 heartburn.n heat.n heating.n heatstroke.n heaviness.n hedonism.n 
@@ -495,7 +495,7 @@ slapstick.n slaughter.n slavery.n slaw.n sleep.n sleet.n slime.n
 slippage.n sludge.n slush.n smallpox.n smog.n smoke.n smoking.n 
 smuggling.n smut.n snobbery.n snooker.n snot.n snow.n snuff.n soap.n 
 sobriety.n soccer.n sociability.n socialism.n socialization.n 
-sociology.n soda.n sodium.n sodomy.n softness.n software.n soil.n 
+sociology.n soda.n sodium.n sodomy.n software.n soil.n 
 solder.n solemnity.n solicitation.n solicitude.n solidarity.n 
 solidification.n solidity.n solipsism.n solitaire.n solubility.n 
 solvency.n somnolence.n soot.n sophistication.n sophistry.n sorcery.n 
