changed language parser in sbolt to support goal sentences that have multiple object-relation and object state predicates

--- a/src/edu/umich/sbolt/language/dictionary.txt
+++ b/src/edu/umich/sbolt/language/dictionary.txt
@@ -3,4 +3,4 @@ ADJECTIVE: red orange yellow green blue purple gray large medium small
 VERB: put get go pick index cancel
 DETERMINER: a the that
 PREPOSITION: on in from to up down right
-ATTRIBUTE: color size shape name
+ATTRIBUTE: color size shape name open closed off
