--- a/src/edu/umich/sbolt/language/grammar.xml
+++ b/src/edu/umich/sbolt/language/grammar.xml
@@ -24,13 +24,18 @@
 		<Tag>REL</Tag>
 		<EntityType>ObjectRelation</EntityType>
 	</Pattern>	
+	<Pattern name="ObjectState">
+		<Regex>(OBJ\d* )(is\d* )(AT\d*)</Regex>
+		<Tag>STT</Tag>
+		<EntityType>ObjectState</EntityType>
+	</Pattern>	
 	<Pattern name="VerbCommand">
 		<Regex>((VB\d* )(OBJ\d* )(PP\d* )(OBJ\d*))|((VB\d* )(PP\d* )(OBJ\d*))|((VB\d* )(OBJ\d*))|(VB\d*)</Regex>
 		<Tag>VBC</Tag>
 		<EntityType>VerbCommand</EntityType>
 	</Pattern>	
 	<Pattern name="GoalInfo">
-		<Regex>(goal\d* )(of\d* )(VBC\d* )(is\d* )(REL\d*\s*)+</Regex>
+		<Regex>(goal\d* )(is\d* )(((and\d* )?REL\d*\s*)|((and\d* )?STT\d*\s*))+</Regex>
 		<Tag>GS</Tag>
 		<EntityType>GoalInfo</EntityType>
 	</Pattern>	
