--- a/src/edu/umich/sbolt/language/dictionary.txt
+++ b/src/edu/umich/sbolt/language/dictionary.txt
@@ -1,6 +1,6 @@
 NOUN: block table ball pantry cylinder stove dishwasher blocka blockb blockc blockd object obj1 obj0 square triangle sphere arch half-cylinder l-shape t-shape rectangle garbage
 ADJECTIVE: red orange yellow green blue purple gray large medium small
-VERB: put get go pick index cancel wait
+VERB: put get go pick index cancel wait open close
 DETERMINER: a the
 PREPOSITION: on in from to up down right for
 ATTRIBUTE: color size shape name open closed off
